--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,72 @@
 [project]
 name = "alpha-edge"
 version = "0.1.0"
-description = ""
+description = "AlphaEdge market ingestion, regime, portfolio search, and reporting"
 authors = [
-    {name = "Alejandro Daniel Torossian",email = "alejandro.torossian@gmail.com"}
+  { name = "Alejandro Daniel Torossian", email = "alejandro.torossian@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
+
 dependencies = [
-    "pandas (>=2.3.3,<3.0.0)",
-    "boto3 (>=1.42.9,<2.0.0)",
-    "fastparquet (>=2024.11.0,<2025.0.0)",
-    "scikit-learn (>=1.8.0,<2.0.0)",
-    "yfinance (>=0.2.66,<0.3.0)",
-    "pyarrow (>=22.0.0,<23.0.0)",
-    "beautifulsoup4 (>=4.14.3,<5.0.0)",
-    "requests (>=2.32.5,<3.0.0)",
-    "typer (>=0.21.1,<0.22.0)"
+  "pandas>=2.2.3,<3.0.0",
+  "numpy>=2.2.3,<3.0.0",
+  "yfinance>=0.2.53,<0.3.0",
+  "boto3>=1.36.22,<2.0.0",
+  "s3fs>=2025.3.2,<2026.0.0",
+  "pyarrow>=8.0.0,<19.0.0",
+
+  # used by universe scraping / html parsing
+  "selenium>=4.31.0,<5.0.0",
+  "lxml>=5.3.2,<6.0.0",
+  "html5lib>=1.1,<2.0",
+
+  # used by score/regime/optimization
+  "scikit-learn>=1.7.2,<2.0.0",
+
+  # optional but common in your repo
+  "pyyaml>=6.0.2,<7.0.0",
 ]
 
-[tool.poetry]
-packages = [{include = "alpha_edge", from = "src"}]
+[project.optional-dependencies]
+dev = [
+  "ruff>=0.9.6,<0.10.0",
+  "ipykernel>=6.29.5,<7.0.0",
+  "jupyter>=1.1.1,<2.0.0",
+]
 
+[project.scripts]
+# single jobs
+alphaedge-ingest = "alpha_edge.cli.ingest:main"
+alphaedge-returns-cache = "alpha_edge.cli.returns_cache:main"
+alphaedge-market-regime = "alpha_edge.cli.market_regime:main"
+alphaedge-daily-report = "alpha_edge.cli.daily_report:main"
+alphaedge-portfolio-search = "alpha_edge.cli.portfolio_search:main"
+alphaedge-universe-update = "alpha_edge.cli.universe_update:main"
+alphaedge-universe-triage = "alpha_edge.cli.universe_triage:main"
+
+# pipelines (all-in-one)
+alphaedge-morning = "alpha_edge.cli.pipelines:morning"
+alphaedge-after-close = "alpha_edge.cli.pipelines:after_close"
+
+[tool.poetry]
+# IMPORTANT: make the package importable
+packages = [{ include = "alpha_edge", from = "src" }]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.ruff]
+line-length = 120
+fix = true
+exclude = ["*.ipynb"]
 
-[tool.poetry.scripts]
-alpha-edge = "alpha_edge.cli.app:main"
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+
+[tool.ruff.lint]
+ignore = ["D211", "D213", "COM812"]
