Add ingest failure reports, universe and backtest
Add multiple ingest-failure CSV reports (2026-01-27 through 2026-02-02) and universe-audit outputs (collision/dedup files) to help diagnose data ingestion issues. Update universe data: modify asset_excluded, ingest_force_refresh, suggested_exclusions/overrides, triage_report, universe.csv and universe_overrides; add snapshots and universe_manual_additions and remove temporary/old .tmp/.snapshots files. Add example script (examples/record_trade_examples.sh). Introduce new backtest, market, portfolio and jobs modules along with CLI and core changes (new/modified src/alpha_edge modules including backtest, market, portfolio, jobs, and CLI pipeline command) and update various execution/reporting helpers to support new functionality. (Note: many compiled .pyc files and data CSVs added.)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,13 +41,13 @@ alphaedge-ingest = "alpha_edge.cli.ingest:main"
 alphaedge-returns-cache = "alpha_edge.cli.returns_cache:main"
 alphaedge-market-regime = "alpha_edge.cli.market_regime:main"
 alphaedge-daily-report = "alpha_edge.cli.daily_report:main"
-alphaedge-portfolio-search = "alpha_edge.cli.portfolio_search:main"
-alphaedge-universe-update = "alpha_edge.cli.universe_update:main"
+alphaedge-universe-update = "alpha_edge.cli.commands.universe_cmd:update"
 alphaedge-universe-triage = "alpha_edge.cli.universe_triage:main"
 
 # pipelines (all-in-one)
-alphaedge-morning = "alpha_edge.cli.pipelines:morning"
-alphaedge-after-close = "alpha_edge.cli.pipelines:after_close"
+alphaedge-morning = "alpha_edge.cli.commands.pipeline_cmd:morning_entry"
+alphaedge-after-close = "alpha_edge.cli.commands.pipeline_cmd:close_entry"
+alphaedge-portfolio-search = "alpha_edge.cli.commands.pipeline_cmd:search_entry"
 
 [tool.poetry]
 # IMPORTANT: make the package importable
